[tool.poetry]
name = "api-music"
version = "0.1.0"
description = ""
authors = ["reinanbr <perseu912@gmail.com>"]
readme = "README.md"
packages = [{include = "api_music"}]

[tool.poetry.dependencies]
python = "3.11"
fastapi = "^0.92.0"
tubemp3 = "^0.2.10"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
